core/v1.0.0/README.md
# v1.0.0

## Contract Deployed

- SablierV2Comptroller
- SablierV2LockupLinear
- SablierV2LockupDynamic
- SablierV2NFTDescriptor

## Sources

- Commit: [412ec3d](https://github.com/sablier-labs/v2-core/commit/412ec3d3998a766507de96afdb26c797d2ae491d)
- Package: [@sablier/v2-core@1.0.0](https://npmjs.com/package/@sablier/v2-core/v/1.0.0)

## Compiler Settings

| Setting        | Value  |
| :------------- | :----- |
| Version        | 0.8.19 |
| EVM            | Paris  |
| Optimizer      | Yes    |
| Optimizer Runs | 1000   |
| Via IR         | true   |

## Salts

The CREATE2 salts used during deployment:

| Chain           | Salt                            |
| :-------------- | :------------------------------ |
| Arbitrum Goerli | ChainID 421613, Version 1.0.0   |
| Arbitrum One    | ChainID 42161, Version 1.0.0    |
| Avalanche       | ChainID 43114, Version 1.0.0    |
| Base            | ChainID 8453, Version 1.0.0     |
| BNB Smart Chain | ChainID 56, Version 1.0.0       |
| Goerli          | ChainID 5, Version 1.0.0        |
| Gnosis          | ChainID 100, Version 1.0.0      |
| Mainnet         | ChainID 1, Version 1.0.0        |
| Optimism        | ChainID 10, Version 1.0.0       |
| Polygon         | ChainID 137, Version 1.0.0      |
| Scroll          | ChainID 534352, Version 1.0.0   |
| Sepolia         | ChainID 11155111, Version 1.0.0 |
